# Teleportraits

./: .gitignore  README.md  environment.yml  input_config.example.json  pyproject.toml
teleportraits/: __init__.py  attention.py  blending.py  cli.py  config.py  depth.py  inversion.py  masks.py  pipeline.py  pose.py  prompts.py  sampler.py  sdxl_utils.py  segmentation.py  types.py
tests/: test_attention_controller.py  test_blending.py  test_foreground_mask_override.py  test_prompts.py  test_reference_mask_loading.py
